--- a/src/style.css
+++ b/src/style.css
@@ -106,3 +106,13 @@ p {
   color: white;
   text-decoration: underline;
 }
+
+.active {
+  color: black;
+  cursor: default;
+}
+
+.active:hover {
+  color: black;
+  text-decoration: none;
+}
