--- a/src/style.css
+++ b/src/style.css
@@ -29,18 +29,28 @@ form {
 }
 .search-box {
   border-radius: 30px;
-  border-color: #3795d4;
+  border: solid;
+  border-width: 2px;
+  border-color: #d47e37;
+  box-shadow: rgba(99, 99, 99, 0.3) 0px 1px 1px 0px;
   margin-bottom: 30px;
   margin-left: 20px;
+  padding: 20px 20px;
 }
 
 .search-button {
   border-radius: 30px;
-  background-color: #3795d4;
+  border-color: #d47e37;
+  background-color: #d47e37;
+  box-shadow: rgba(99, 99, 99, 0.3) 0px 2px 2px 0px;
   margin-left: 5px;
   margin-bottom: 30px;
   margin-right: 20px;
   padding: 10px 20px;
+}
+
+.search-button:hover {
+  background-color: #3795d4;
 }
 
 h2 {
