Update weather Forecast CSS (justify center).

--- a/src/style.css
+++ b/src/style.css
@@ -115,6 +115,9 @@ li strong {
   margin: 10px;
   padding: 10px;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .forecast-indiv {
