--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,15 @@ form {
   padding: 20px 20px;
 }
 
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 20px;
+  background-image: url("image/cancel.png");
+  background-size: contain;
+  cursor: pointer;
+}
+
 .search-button {
   border-radius: 30px;
   border-color: #d45f37;
