--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,7 @@ input[type="search"]::-webkit-search-cancel-button {
   background-image: url("image/cancel.png");
   background-size: contain;
   cursor: pointer;
+  margin-right: 0;
 }
 
 .buttons {
